# ladder-pipeline-example

./: .left_elbow.txt.swp  CMakeLists.txt  correction-example.cpp  ladder-pipeline-example.cpp  ladder-script  ladderTest  left_elbow.txt  left_elbow_correct.txt  left_elbow_negative.txt  left_elbow_positive.txt  pipeline-trajectory-follower.cpp  trajectory-follower
